--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,5 +8,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
